# C-Address-Onboarding-Bridge-Backend

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.blue-green.yml  docker-compose.observability.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  ci.yml  deploy-contract.yml  examples.yml  fuzz.yml  security.yml
api/: package.json  vitest.config.ts
api/scripts/: migrate.ts
api/src/: config.ts  index.ts  logger.ts  (+1 more)
cex/: withdrawal-router.ts
docs/: DEPLOYMENT.md  audit-log-integrity.md  database-schema.md  database.md  developer-setup.md  integration-troubleshooting.md  load-testing-k6.md  multilingual-sdk-examples.md  security-audit-and-threat-model.md  troubleshooting.md  video-walkthroughs.md  wallet-integration.md
examples/: README.md  docker-compose.yml
examples/python/: Dockerfile  main.py  pyproject.toml  requirements.txt
examples/python/c_address_bridge/: __init__.py  client.py  errors.py
examples/rust/: Cargo.toml  Dockerfile
examples/rust/examples/: bridge.rs
examples/rust/src/: client.rs  error.rs  lib.rs  types.rs
hooks/: package.json  tsconfig.json
k8s/: blue-green.yaml
offramp/: moonpay.ts  transak.ts
reports/: dependency-audit-summary.md  dependency-audit.json
scripts/: blue-green-deploy.sh  dependency-vulnerability-monitor.mjs  deploy-blue-green.sh  deploy-cdn-assets.sh  deploy-contract.sh  generate-deployment-report.sh  monitor.sh  rollback-contract.sh  rollback.sh  secrets.mjs  smoke-test.js
sdk/: package.json
(+135 files in other folders)
