[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c-address-bridge"
version = "0.1.0"
description = "Python client for the C-Address Onboarding Bridge API"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
