[package]
name = "c-address-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust client for the C-Address Onboarding Bridge API"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "bridge"
path = "examples/bridge.rs"
